--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-  "name": "Man-Userbot",
-  "description": "[Man-Userbot] userbot Telegram modular yang berjalan pada Python 3.9+",
+  "name": "Nomercy-Userbot",
+  "description": "[Nomercy-Userbot] userbot Telegram modular yang berjalan pada Python 3.9+",
   "logo": "https://telegra.ph/file/9dc4e335feaaf6a214818.jpg",
   "keywords": ["telegram", "userbot", "man-userbot", "modular", "python"],
-  "repository": "https://github.com/mrismanaziz/Man-Userbot",
-  "telegram": "https://t.me/mrismanaziz",
+  "repository": "https://github.com/FawazXs/Nomercy-Userbot",
+  "telegram": "https://t.me/xenxust",
   "success_url": "https://t.me/Lunatic0de",
   "stack": "container",
   "env": {
